--- a/src/app.css
+++ b/src/app.css
@@ -1,42 +1,23 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Liu+Jian+Mao+Cao&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+:root {
+  --fontSize: 18px;
+  --fontFamily: "Montserrat";
+  --fontFamilyVariant: "Liu Jian Mao Cao", cursive;
+  --fontWeight: 400;
+  --fontWeightBold: 700;
+  --fontWeightUltraBold: 800;
+  --fontWeightLight: 300;
+  --fontWeightMedium: 500;
+  --fontWeightSemiBold: 600;
+  --fontWeightThin: 100;
+  --fontWeightUltraLight: 200;
+  --primatyColor: #005f94;
+  --secondaryColor: #00a0e9;
+  --smScreen: 640px;
+  --lgScreen: 1024px;
+  --xlScreen: 1440px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-button {
-  font-size: calc(10px + 2vmin);
+html,
+body {
+  font-family: var(--fontFamily);
 }
