--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,5 +3,22 @@
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
-  border-bottom: #000 solid 1px;
+  background-color: var(--primatyColor);
+  color: #fff;
+}
+.navbar-title {
+  margin-left: 1rem;
+  font-family: var(--fontFamilyVariant);
+  font-size: 1.5rem;
+  margin: 0;
+}
+
+@media screen and (max-width: 773px) {
+  .navbar {
+    justify-content: center;
+  }
+  .navbar-title {
+    font-size: 1.5rem;
+    margin: 0;
+  }
 }
