--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -10,15 +10,33 @@
   margin-left: 1rem;
   font-family: var(--fontFamilyVariant);
   font-size: 1.5rem;
-  margin: 0;
+  margin: 0 1rem;
 }
-
-@media screen and (max-width: 773px) {
+.navbar-icon {
+  display: none;
+}
+@media screen and (max-width: 783px) {
   .navbar {
     justify-content: center;
   }
   .navbar-title {
     font-size: 1.5rem;
     margin: 0;
+  }
+}
+
+@media screen and (max-width: 557px) {
+  .navbar {
+    justify-content: space-between;
+  }
+  .navbar-movile {
+    display: none;
+  }
+  .navbar-title {
+    margin: 0.3rem 1rem;
+  }
+  .navbar-icon {
+    display: inline-block;
+    margin: 0 1rem;
   }
 }
