--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -15,7 +15,21 @@
 .navbar-icon {
   display: none;
 }
-@media screen and (max-width: 783px) {
+.navigator-globe {
+  margin-left: 1rem;
+  position: relative;
+}
+.navigator-select {
+  background-color: var(--primatyColor);
+  /* border: #000 solid 1px; */
+  position: absolute;
+  right: 0.4rem;
+  top: 0.9rem;
+}
+.navigator-select-hidden {
+  display: none;
+}
+@media screen and (max-width: 800px) {
   .navbar {
     justify-content: center;
   }
