--- a/src/components/navigator/navigator.css
+++ b/src/components/navigator/navigator.css
@@ -18,7 +18,7 @@
   text-decoration: none;
 }
 .navigator-btn {
-  margin-left: 0.5rem;
+  /* margin-left: 0.5rem; */
   color: #fff;
   border: none;
   background: transparent;
