--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -3,7 +3,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  width: 200px;
+  width: 170px;
   background-color: rgba(0, 95, 148, 0.8);
   overflow-x: hidden;
   padding-top: 20px;
@@ -25,4 +25,9 @@
 .close-icon {
   position: absolute;
   right: 1rem;
+}
+.sidebar-btn {
+  color: #fff;
+  border: none;
+  background: transparent;
 }
