--- a/src/components/navigator/navigator.css
+++ b/src/components/navigator/navigator.css
@@ -23,3 +23,17 @@
   border: none;
   background: transparent;
 }
+.navigator-globe {
+  margin-left: 1rem;
+  position: relative;
+}
+.navigator-select {
+  background-color: var(--primatyColor);
+  /* border: #000 solid 1px; */
+  position: absolute;
+  top: 2rem;
+  right: 0.5rem;
+}
+.navigator-select-hidden {
+  display: none;
+}
