--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -3,7 +3,7 @@
   flex-flow: row wrap;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--primatyColor);
+  background-color: var(--primaryColor);
   color: #fff;
 }
 .navbar-title {
