--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,22 +1,34 @@
 .footer {
   width: 100%;
-  height: 5vw;
-  margin-top: 2rem;
+  margin-top: 4rem;
   background-color: var(--primaryColor);
 }
 .footer-content {
+  width: 80%;
+  height: 6vw;
+  /* overflow: hidden; */
   display: flex;
   flex-flow: row nowrap;
-  justify-content: center;
-  align-items: flex-start;
-  gap: 0 2rem;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 3rem;
 }
 
 .image-social {
   width: 5%;
   object-fit: cover;
 }
+
 .text-service {
   color: #fff;
   font-size: 1.5rem;
+  letter-spacing: 2px;
+  font-weight: var(--fontWeightSemiBold);
+  font-size: clamp(var(--fontSize), 5vw, 5vw);
+  text-shadow: 2px 2px 3px #000;
+}
+@media screen and (max-width: 600px) {
+  .footer {
+    margin-top: 2rem;
+  }
 }
