--- a/src/app.css
+++ b/src/app.css
@@ -16,7 +16,7 @@
   --primaryColor: #005f94;
   --secondaryColor: #00a0e9;
   --tertiaryColor: #009abb;
-  --quaternaryColor: #89acc0;
+  --quaternaryColor: #afccdd;
   --quinaryColor: #5091b5;
   --smScreen: 640px;
   --lgScreen: 1024px;
