--- a/src/app.css
+++ b/src/app.css
@@ -18,6 +18,7 @@
   --tertiaryColor: #009abb;
   --quaternaryColor: #afccdd;
   --quinaryColor: #5091b5;
+  --senaryColor: #50b9d0;
   --smScreen: 640px;
   --lgScreen: 1024px;
   --xlScreen: 1440px;
