--- a/src/pages/family/family.css
+++ b/src/pages/family/family.css
@@ -92,6 +92,8 @@
 .section-polaroid {
   display: flex;
   justify-content: space-evenly;
+  align-items: flex-start;
+  height: 31vw;
 }
 .takes-polaroid {
   transform: rotate(-9deg);
