--- a/src/app.css
+++ b/src/app.css
@@ -19,6 +19,8 @@
   --quaternaryColor: #afccdd;
   --quinaryColor: #5091b5;
   --senaryColor: #50b9d0;
+  --septenaryColor: #e18a30;
+  --octonaryColor: #eaae70;
   --smScreen: 640px;
   --lgScreen: 1024px;
   --xlScreen: 1440px;
