--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,29 +1,16 @@
 .footer {
-  margin-top: 4rem;
+  margin-top: 10vw;
   background-color: var(--primaryColor);
 }
 
 .footer-content {
-  width: 50%;
-  /* height: 6vw; */
-  margin: auto;
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 3vw;
 }
-.footer-content a {
-  width: max-content;
-  text-align: center;
-}
-.image-social {
-  width: 85%;
-  object-fit: cover;
-}
-
 .text-service {
-  margin: 0;
+  margin: 0 0 0 5vw;
   color: #fff;
   letter-spacing: 2px;
   font-weight: var(--fontWeightSemiBold);
@@ -35,6 +22,6 @@
     margin-top: 2rem;
   }
   .footer-content {
-    width: 90vw;
+    /* width: 90vw; */
   }
 }
