--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -57,7 +57,8 @@
   line-height: 1.7;
 }
 .home-polaroid {
-  margin: 3rem auto;
+  max-width: 85vw;
+  margin: 7rem auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
@@ -89,7 +90,7 @@
   transform: scale(1.1);
 }
 .home-title {
-  margin: 9vw 0 2rem 0;
+  margin: 14vw 0 6vw 0;
   padding-right: 13vw;
   font-size: clamp(8vw, 10vw, 12vw);
   text-align: center;
@@ -120,30 +121,27 @@
   width: 100%;
 }
 .alter {
-  margin: 0 0 3rem 0;
+  margin: 5vw 0 6vw 0;
   padding-right: 26vw;
   line-height: 1.2;
 }
 
-.home-footer {
-  position: relative;
-}
-.home-image-footer {
-  position: absolute;
-  top: -7vw;
-  right: 11vw;
-  width: 20%;
-  object-fit: cover;
-}
 @media screen and (max-width: 600px) {
   .home-content {
     width: calc(100% - 15vw);
   }
   .home-content-text {
-    width: 27ch;
+    width: 29ch;
+    font-size: 16px;
     line-height: 1.3;
   }
-
+  .home-polaroid {
+    margin: 8vw auto;
+    max-width: 90vw;
+  }
+  .home-title {
+    margin: 10vw 0 6vw 0;
+  }
   .alter {
     margin: 2rem 0 3rem 0;
     padding-right: 26vw;
