--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -1,5 +1,3 @@
-.contact-wrapper {
-}
 .logo {
   margin: 1rem;
   max-width: 15vw;
@@ -18,8 +16,8 @@
   max-width: 80%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 40% max-content;
-  grid-template-rows: 20vh max-content;
+  grid-template-columns: 39vw max-content;
+  grid-template-rows: 15vh max-content;
   justify-content: center;
 }
 .content-icons-social {
@@ -27,8 +25,9 @@
   flex-flow: row nowrap;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+  gap: 4vw;
 }
+
 .content-icons-social a {
   text-align: center;
 }
@@ -75,8 +74,11 @@
   .content-icons-social {
     grid-row: 1 / span 2;
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: column nowrap;
     align-items: center;
+  }
+  .content-icons-social img {
+    max-width: 20vw;
   }
   .icon-linkedin {
     width: 27vw;
