--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -8,7 +8,7 @@
 }
 .home-cite {
   position: absolute;
-  width: 665px;
+  width: 40ch;
   max-width: 42vw;
   margin: 0;
   padding: 0;
@@ -20,17 +20,17 @@
 }
 .home-section {
   position: relative;
-  height: 15vw;
+  height: 11vw;
   background-color: var(--primaryColor);
   margin: 0;
   padding: 0;
 }
 .home-arrow {
   position: absolute;
-  width: calc(100% - 60vw);
+  width: calc(100% - 70vw);
   object-fit: cover;
-  right: 1vw;
-  top: 6vw;
+  right: 3vw;
+  top: 3vw;
 }
 
 .home-section-title {
@@ -40,34 +40,34 @@
   font-size: clamp(11vw, 2vw, var(--fontSize));
   font-weight: var(--fontWeightUltraLight);
   color: var(--quaternaryColor);
-  top: 5vw;
-  left: 5vw;
+  top: 1vw;
+  left: 13vw;
   letter-spacing: 3px;
   text-shadow: 0 2px 5px #000;
 }
 .home-content {
-  width: calc(100% - 40vw);
+  width: calc(100% / 2);
   margin: auto;
 }
 .home-content-text {
   margin-top: 10vw;
-  width: 45ch;
-  font-size: clamp(1rem, 2vw, 3rem);
-  word-spacing: 0.1rem;
-  line-height: 1.7;
+  width: 40ch;
+  font-size: 1.7vmax;
+  line-height: 1.5;
+  color: var(--color);
 }
 .home-polaroid {
-  max-width: 70vw;
-  margin: 7rem auto;
+  max-width: 68vw;
+  margin: 4rem auto;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
 }
 .polaroidClar {
-  margin-top: 10vw;
+  margin-top: 5vw;
   justify-self: center;
-  transform: rotate(-9deg);
-  margin-left: 1rem;
+  transform: rotate(-5deg);
+  /* margin-left: 1rem; */
   transition: all ease 0.5s;
 }
 .polaroidClar:hover {
@@ -83,17 +83,21 @@
 .polaroidWhite {
   justify-self: center;
   transform: rotate(9deg);
-  margin-right: 1rem;
+  /* margin-right: 1rem; */
   transition: all ease 0.5s;
 }
 .polaroidWhite:hover {
   transform: scale(1.1);
 }
 .home-title {
-  margin: 14vw 0 6vw 0;
-  padding-right: 13vw;
-  font-size: clamp(8vw, 10vw, 12vw);
-  text-align: center;
+  /* width: 80vw; */
+  margin: 0 auto;
+  padding: 2vw;
+
+  /* margin: 14vw 0 6vw 0; */
+  /* padding-right: 13vw; */
+  font-size: 7vw;
+  /* text-align: center; */
   color: var(--quinaryColor);
   font-weight: var(--fontWeightUltraLight);
   word-spacing: 0.2rem;
@@ -128,19 +132,23 @@
 
 @media screen and (max-width: 600px) {
   .home-content {
-    width: calc(100% - 15vw);
+    width: calc(100% - 41vw);
   }
   .home-content-text {
     width: 29ch;
     font-size: 16px;
     line-height: 1.3;
   }
+  .home-arrow {
+    right: 2vw;
+  }
   .home-polaroid {
     margin: 8vw auto;
-    max-width: 90vw;
+    /* max-width: 90vw; */
   }
   .home-title {
     margin: 10vw 0 6vw 0;
+    padding: 0;
   }
   .alter {
     margin: 2rem 0 3rem 0;
