--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -90,14 +90,9 @@
   transform: scale(1.1);
 }
 .home-title {
-  /* width: 80vw; */
-  margin: 0 auto;
-  padding: 2vw;
-
-  /* margin: 14vw 0 6vw 0; */
-  /* padding-right: 13vw; */
+  text-align: center;
+  margin-right: 10vw;
   font-size: 7vw;
-  /* text-align: center; */
   color: var(--quinaryColor);
   font-weight: var(--fontWeightUltraLight);
   word-spacing: 0.2rem;
@@ -136,7 +131,7 @@
   }
   .home-content-text {
     width: 29ch;
-    font-size: 16px;
+    font-size: 12px;
     line-height: 1.3;
   }
   .home-arrow {
